import {Team2Data, Player2Data} from './overlay/live_team_panel';

/**
 * í…ŒìŠ¤íŠ¸ ë°ì´í„°ì˜ ì›ë³¸ í˜•ì‹ ì¸í„°í˜ì´ìŠ¤
 */
interface MessageData {
    matchId: string;
    tournamentId: string;
    playerStats: PlayerStat[];
    totalPlayerStats: PlayerStat[];
    teamStats: TeamStat[];
    totalTeamStats: TotalTeamStat[];
    refresh?: boolean;
}

interface PlayerStat {
    name: string;
    id: string;
    teamName: string;
    teamId?: string;
    postDataPb?: {
        deathType?: string;
        damageDealt?: number;
        kills?: number;
    };
}

interface TeamStat {
    name: string;
    id: string;
    rank: number;
    totalKills?: number;
}

interface TotalTeamStat {
    name: string;
    team_id: number;
    totalKills: number;
    deaths?: number;
    rank: number;
    totalScore: number;
    matchesJoined?: string;
    placementScore?: number;
    wwcd?: number;
}

/**
 * ObserverMessage2 í˜•ì‹ ì¸í„°í˜ì´ìŠ¤
 */
export interface ObserverMessage2 {
    match_id: Uint8Array;
    tournament_id: string;
    player_stats: Player2Data[];
    total_player_stats: Player2Data[];
    team_stats: Team2Data[];
    total_team_stats: Team2Data[];
    refresh: boolean;
}

/**
 * í…ŒìŠ¤íŠ¸ ë°ì´í„° ë³€í™˜ê¸° í´ë˜ìŠ¤
 */
class MessageDataConverter {
    /**
     * í…ŒìŠ¤íŠ¸ ë°ì´í„°ë¥¼ ObserverMessage2 í˜•ì‹ìœ¼ë¡œ ë³€í™˜
     */
    public static convertToObserverMessage2(Data: MessageData): ObserverMessage2 {
        try {
            return {
                match_id: this.stringToUint8Array(Data.matchId),
                tournament_id: Data.tournamentId,
                player_stats: this.convertPlayerStats(Data.playerStats),
                total_player_stats: this.convertPlayerStats(Data.totalPlayerStats),
                team_stats: this.convertTeamStats(Data.teamStats),
                total_team_stats: this.convertTotalTeamStats(Data.totalTeamStats),
                refresh: Data.refresh || false
            };
        } catch (error) {
            console.error('Failed to convert  data:', error);
            throw error;
        }
    }

    /**
     * ë¬¸ìì—´ì„ Uint8Arrayë¡œ ë³€í™˜
     */
    private static stringToUint8Array(str: string): Uint8Array {
        const encoder = new TextEncoder();
        return encoder.encode(str);
    }

    /**
     * í”Œë ˆì´ì–´ í†µê³„ ë³€í™˜
     */
    private static convertPlayerStats(playerStats: PlayerStat[]): Player2Data[] {
        return playerStats.map(player => {
            const telemetry = this.convertPlayerTelemetry(player.postDataPb);
            const postData = this.convertPostData(player.postDataPb);

            // teamIdê°€ ì—†ìœ¼ë©´ teamNameìœ¼ë¡œ ID ìƒì„±
            let teamId = 0;
            if (player.teamId) {
                teamId = parseInt(player.teamId);
            } else if (player.teamName) {
                teamId = this.generateTeamId(player.teamName);
            }

            console.log(`Converting player: ${player.name}, teamName: ${player.teamName}, teamId: ${player.teamId} -> ${teamId}`);

            return {
                name: player.name,
                team_name: player.teamName,
                team_id: teamId,
                post_data_pb: postData,
                telemetry_pb: telemetry,
                mob: undefined
            };
        });
    }

    /**
     * í”Œë ˆì´ì–´ PostData ë³€í™˜
     */
    private static convertPostData(postDataPb?: PlayerStat['postDataPb']): {
        death_type: string;
        kills: number;
        damage_dealt: number;
    } {
        if (!postDataPb) {
            console.log('No postDataPb, defaulting to alive');
            return {
                death_type: 'alive',
                kills: 0,
                damage_dealt: 0
            };
        }

        const deathType = postDataPb.deathType || 'alive'; // deathTypeì´ ì—†ìœ¼ë©´ aliveë¡œ ê¸°ë³¸ê°’
        console.log(`Converting postData: deathType=${postDataPb.deathType} -> ${deathType}`);

        return {
            death_type: deathType,
            kills: postDataPb.kills || 0,
            damage_dealt: postDataPb.damageDealt || 0
        };
    }

    /**
     * í”Œë ˆì´ì–´ í…”ë ˆë©”íŠ¸ë¦¬ ë°ì´í„° ë³€í™˜
     */
    private static convertPlayerTelemetry(postDataPb?: PlayerStat['postDataPb']): {
        is_alive: boolean;
        is_groggy: boolean
    } {
        if (!postDataPb) {
            return {
                is_alive: true,
                is_groggy: false
            };
        }

        const deathType = postDataPb.deathType || 'alive';

        return {
            is_alive: deathType === 'alive' || deathType === 'groggy',
            is_groggy: deathType === 'groggy'
        };
    }

    /**
     * íŒ€ í†µê³„ ë³€í™˜ (í˜„ì¬ ê²Œì„ ìƒíƒœ)
     */
    private static convertTeamStats(teamStats: TeamStat[]): Team2Data[] {
        return teamStats.map(team => {
            const teamId = parseInt(team.id) || this.generateTeamId(team.name);
            console.log(`Converting team: ${team.name}, id: ${team.id} -> ${teamId}`);

            return {
                name: team.name,
                id: teamId,
                rank: team.rank,
                total_kills: team.totalKills || 0,
                total_score: 0, // ê¸°ë³¸ê°’
                eliminated: false, // ê¸°ë³¸ê°’
                full_name: team.name,
                kills_per_team: new Map(),
                placement_rank: team.rank,
                region_code: 1, // ê¸°ë³¸ê°’ (JP)
                phase_locations: [],
                kill_logs: [],
                mob: undefined
            };
        });
    }

    /**
     * ì´ íŒ€ í†µê³„ ë³€í™˜ (ëˆ„ì  í†µê³„)
     */
    private static convertTotalTeamStats(totalTeamStats: TotalTeamStat[]): Team2Data[] {
        return totalTeamStats.map(team => ({
            name: team.name,
            id: team.team_id || this.generateTeamId(team.name), // team_idê°€ ì—†ìœ¼ë©´ ì´ë¦„ìœ¼ë¡œ ID ìƒì„±
            total_kills: team.totalKills,
            total_score: team.totalScore,
            rank: team.rank,
            eliminated: (team.deaths || 0) >= 4, // 4ëª… ì´ìƒ ì£½ìœ¼ë©´ íƒˆë½ìœ¼ë¡œ ê°„ì£¼
            full_name: team.name,
            kills_per_team: new Map(),
            placement_rank: team.rank,
            region_code: 1, // ê¸°ë³¸ê°’ (JP)
            phase_locations: [],
            kill_logs: [],
            mob: undefined
        }));
    }

    /**
     * íŒ€ ì´ë¦„ìœ¼ë¡œë¶€í„° ìˆ«ì ID ìƒì„±
     */
    private static generateTeamId(teamName: string): number {
        let hash = 0;
        for (let i = 0; i < teamName.length; i++) {
            const char = teamName.charCodeAt(i);
            hash = ((hash << 5) - hash) + char;
            hash = hash & hash; // 32bit ì •ìˆ˜ë¡œ ë³€í™˜
        }
        return Math.abs(hash);
    }

    /**
     * JSON ë¬¸ìì—´ì„ íŒŒì‹±í•˜ì—¬ ObserverMessage2ë¡œ ë³€í™˜
     */
    public static parseAndConvert(jsonString: string): ObserverMessage2 {
        try {
            const Data: MessageData = JSON.parse(jsonString);
            return this.convertToObserverMessage2(Data);
        } catch (error) {
            console.error('Failed to parse JSON string:', error);
            throw new Error(`Invalid JSON format: ${error}`);
        }
    }

    /**
     * ë³€í™˜ëœ ë°ì´í„°ì˜ ìœ íš¨ì„± ê²€ì‚¬
     */
    public static validateObserverMessage2(data: ObserverMessage2): boolean {
        try {
            console.log('ğŸ” Validating observer message:', {
                tournament_id: data.tournament_id,
                match_id_type: typeof data.match_id,
                match_id_length: data.match_id?.length,
                total_team_stats_length: data.total_team_stats?.length,
                total_player_stats_length: data.total_player_stats?.length
            });

            // í•„ìˆ˜ í•„ë“œ ê²€ì‚¬
            if (!data.tournament_id) {
                console.log('âŒ Validation failed: missing tournament_id');
                return false;
            }

            if (!data.match_id || !(data.match_id instanceof Uint8Array)) {
                console.log('âŒ Validation failed: invalid match_id', typeof data.match_id);
                return false;
            }

            // ë°°ì—´ í•„ë“œ ê²€ì‚¬
            if (!Array.isArray(data.total_team_stats)) {
                console.log('âŒ Validation failed: total_team_stats is not array');
                return false;
            }

            if (!Array.isArray(data.total_player_stats)) {
                console.log('âŒ Validation failed: total_player_stats is not array');
                return false;
            }

            // íŒ€ ë°ì´í„° ìœ íš¨ì„± ê²€ì‚¬
            for (const team of data.total_team_stats) {
                if (!team.name || typeof team.id !== 'number' || typeof team.rank !== 'number') {
                    console.log('âŒ Validation failed: invalid team data', {
                        name: team.name,
                        id: team.id,
                        id_type: typeof team.id,
                        rank: team.rank,
                        rank_type: typeof team.rank
                    });
                    return false;
                }
            }

            console.log('âœ… Validation passed');
            return true;
        } catch (error) {
            console.error('âŒ Validation error:', error);
            return false;
        }
    }
}

export { MessageDataConverter };
