// Livestanding window TypeScript for Live Standing application

import {LiveTeamPanel, Team2Data, Player2Data} from './live_team_panel';
import {currentConfig, applyCSSVariables} from './live-standing-config';
import {EliminationOverlay} from './elimination_overlay';
import {PanelAnimationController} from './panel_animation_controller';
import {MessageDataConverter} from "@renderer/interface";

// ì‹œê°„ ì •ë³´ ì¸í„°í˜ì´ìŠ¤
interface TimeInfo {
    hours: number;
    minutes: number;
    seconds: number;
}

// ì„¸ì…˜ ìƒíƒœ ì¸í„°í˜ì´ìŠ¤
interface SessionState {
    startTime: number;
    isRunning: boolean;
}

// ObserverMessage2 ì¸í„°í˜ì´ìŠ¤ (protobuf ìŠ¤í‚¤ë§ˆ ê¸°ë°˜)
interface ObserverMessage2 {
    match_id: Uint8Array;
    tournament_id: string;
    player_stats: Player2Data[];
    total_player_stats: Player2Data[];
    team_stats: Team2Data[];
    total_team_stats: Team2Data[];
    refresh: boolean;
}

// ë¼ì´ë¸ŒìŠ¤íƒ ë”© ìƒíƒœ
interface LiveStandingState {
    teams: Team2Data[];
    players: Player2Data[];
    lastUpdate: number;
    isConnected: boolean;
}

// ì„¸ì…˜ ìƒíƒœ
const sessionState: SessionState = {
    startTime: Date.now(),
    isRunning: true
};

// ë¼ì´ë¸ŒìŠ¤íƒ ë”© ìƒíƒœ
const liveStandingState: LiveStandingState = {
    teams: [],
    players: [],
    lastUpdate: 0,
    isConnected: false
};

let totalTeamIndexMap: Map<string, LiveTeamPanel> = new Map(); // íŒ€ ì´ë¦„ì„ í‚¤ë¡œ ì‚¬ìš©
let eliminationOverlay: EliminationOverlay;

// ë°ì´í„° ì²˜ë¦¬ í ì‹œìŠ¤í…œ
let dataQueue: any[] = []; // FIFO í
let isProcessingData: boolean = false;
let dataProcessingInterval: NodeJS.Timeout | null = null;
const queueDelayInSecs = 2; // í ë”œë ˆì´

/**
 * ì‹œê°„ì„ HH:MM:SS í˜•ì‹ìœ¼ë¡œ í¬ë§·íŒ…
 */
function formatTime(timeInfo: TimeInfo): string {
    const {hours, minutes, seconds} = timeInfo;
    return `${hours.toString().padStart(2, '0')}:${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
}

/**
 * í˜„ì¬ ì‹œê°„ ì—…ë°ì´íŠ¸
 */
function updateCurrentTime(): void {
    try {
        const now = new Date();
        const timeString = now.toLocaleTimeString('ko-KR');

        const timeElement = document.getElementById('currentTime');
        if (timeElement) {
            timeElement.textContent = timeString;
        } else {
            console.warn('Current time element not found');
        }
    } catch (error) {
        console.error('Failed to update current time:', error);
    }
}

/**
 * ê²½ê³¼ ì‹œê°„ì„ TimeInfo ê°ì²´ë¡œ ë³€í™˜
 */
function getElapsedTime(startTime: number): TimeInfo {
    const elapsed = Date.now() - startTime;

    return {
        hours: Math.floor(elapsed / 3600000),
        minutes: Math.floor((elapsed % 3600000) / 60000),
        seconds: Math.floor((elapsed % 60000) / 1000)
    };
}

/**
 * ì„¸ì…˜ ì‹œê°„ ì—…ë°ì´íŠ¸
 */
function updateSessionTime(): void {
    try {
        if (!sessionState.isRunning) {
            return;
        }

        const timeInfo = getElapsedTime(sessionState.startTime);
        const timeString = formatTime(timeInfo);

        const sessionElement = document.getElementById('sessionTime');
        if (sessionElement) {
            sessionElement.textContent = timeString;
        } else {
            console.warn('Session time element not found');
        }
    } catch (error) {
        console.error('Failed to update session time:', error);
    }
}

/**
 * ì„¸ì…˜ ì¬ì‹œì‘
 */
function restartSession(): void {
    sessionState.startTime = Date.now();
    sessionState.isRunning = true;
    console.log('Session restarted');
}

/**
 * ì„¸ì…˜ ì¼ì‹œì •ì§€/ì¬ê°œ
 */
function toggleSession(): void {
    sessionState.isRunning = !sessionState.isRunning;
    console.log(`Session ${sessionState.isRunning ? 'resumed' : 'paused'}`);
}

/**
 * ëª¨ë“  ì‹œê°„ ì •ë³´ ì—…ë°ì´íŠ¸
 */
function updateAllTimes(): void {
    updateCurrentTime();
    updateSessionTime();
}

/**
 * íƒ€ì´ë¨¸ ì´ˆê¸°í™”
 */
function initializeTimer(): void {
    // ì´ˆê¸° ì‹œê°„ ì„¤ì •
    updateAllTimes();

    // 1ì´ˆë§ˆë‹¤ ì‹œê°„ ì—…ë°ì´íŠ¸
    const intervalId = setInterval(updateAllTimes, 1000);

    console.log('LiveStanding timer initialized');

    // ì°½ì´ ë‹«í ë•Œ íƒ€ì´ë¨¸ ì •ë¦¬ (ì„ íƒì‚¬í•­)
    window.addEventListener('beforeunload', () => {
        clearInterval(intervalId);
        console.log('Timer cleared');
    });
}

/**
 * ìƒíƒœ í‘œì‹œê¸° ì—…ë°ì´íŠ¸ (ì„ íƒì‚¬í•­)
 */
function updateStatusIndicator(): void {
    const indicator = document.querySelector('.status-indicator') as HTMLElement;
    if (indicator) {
        // í™œì„± ìƒíƒœë¥¼ ë‚˜íƒ€ë‚´ëŠ” í´ë˜ìŠ¤ ì¶”ê°€
        indicator.classList.add('active');

        // ê¹œë¹¡ì´ëŠ” íš¨ê³¼ (ì„ íƒì‚¬í•­)
        setInterval(() => {
            indicator.classList.toggle('pulse');
        }, 2000);
    }
}

/**
 * ë¼ì´ë¸ŒìŠ¤íƒ ë”© ë°ì´í„° ì—…ë°ì´íŠ¸ (WPF UpdateLeaderboard ë°©ì‹)
 */
function updateLiveStandingData(observerMessage: ObserverMessage2): void {
    try {
        console.log(`Updating leaderboard: ${observerMessage.team_stats?.length || 0} / ${observerMessage.player_stats?.length || 0} / refresh=${observerMessage.refresh}`);

        if (observerMessage.refresh) {
            clearLeaderboard();
        }

        // íŒ€ ë°ì´í„° ì—…ë°ì´íŠ¸
        const teams = observerMessage.team_stats || [];
        const totalTeams = observerMessage.total_team_stats || [];
        const players = observerMessage.player_stats || [];
        const totalPlayers = observerMessage.total_player_stats || [];

        liveStandingState.teams = totalTeams;
        liveStandingState.players = totalPlayers;
        liveStandingState.lastUpdate = Date.now();
        liveStandingState.isConnected = true;

        // íŒ€ ë§µ ìƒì„± (í˜„ì¬ ë§¤ì¹˜ íŒ€ë“¤)
        const teamMap = new Map<string, Team2Data>();
        teams.forEach(team => teamMap.set(team.name, team));

        // í”Œë ˆì´ì–´ ë§µ ìƒì„±
        const playersMap = new Map<string, Player2Data[]>();
        players.forEach(player => {
            if (!playersMap.has(player.team_name)) {
                playersMap.set(player.team_name, []);
            }
            playersMap.get(player.team_name)!.push(player);
        });

        // ì´ íŒ€ë“¤ì„ ë­í‚¹ ìˆœìœ¼ë¡œ ì •ë ¬ (WPF ë¡œì§)
        totalTeams.sort((x, y) => {
            if (x.rank !== y.rank) {
                return x.rank - y.rank;
            }
            return x.name.localeCompare(y.name);
        });

        // UI ì—…ë°ì´íŠ¸
        updateTotalLeaderboardOnUIThread(totalTeams, teamMap, playersMap, observerMessage.refresh || false);

        console.log(`Updated leaderboard Done: ${teams.length} / ${players.length} / refresh=${observerMessage.refresh}`);
    } catch (error) {
        console.error('Failed to update live standing data:', error);
    }
}

/**
 * ì´ ë¦¬ë”ë³´ë“œ UI ì—…ë°ì´íŠ¸ (WPF UpdateTotalLeaderboardOnUIThread ë°©ì‹)
 */
function updateTotalLeaderboardOnUIThread(
    totalTeams: Team2Data[],
    matchTeamMap: Map<string, Team2Data>,
    playersMap: Map<string, Player2Data[]>,
    refresh: boolean
): void {
    const container = document.querySelector('.teams-container');
    if (!container) {
        console.error('Teams container not found');
        return;
    }

    const eliminatedTeams: Team2Data[] = [];
    let currentIndex = 1;
    let matchEnded = false;

    // ìµœëŒ€ 16ê°œ íŒ€ë§Œ í‘œì‹œ (F1 ìŠ¤íƒ€ì¼)
    const teamsToShow = totalTeams.slice(0, 16);

    teamsToShow.forEach((team) => {
        const matchTeam = matchTeamMap.get(team.name);
        if (!matchTeam) {
            return; // í˜„ì¬ ë§¤ì¹˜ì— ì°¸ì—¬í•˜ì§€ ì•ŠëŠ” íŒ€ì€ ê±´ë„ˆë›°ê¸°
        }

        let panel = totalTeamIndexMap.get(team.name);
        if (!panel) {
            // ìƒˆ íŒ¨ë„ ìƒì„± (data-team-name ì†ì„± ì¶”ê°€)
            panel = new LiveTeamPanel(team, [], currentIndex);
            const panelElement = panel.getElement();
            panelElement.setAttribute('data-team-name', team.name); // F1 ì• ë‹ˆë©”ì´ì…˜ì„ ìœ„í•œ ì‹ë³„ì

            const leaderboardCanvas = container as HTMLElement;
            leaderboardCanvas.appendChild(panelElement);
            totalTeamIndexMap.set(team.name, panel);
        }

        // íŒ¨ë„ ì—…ë°ì´íŠ¸ (ê¸°ì¡´ ì• ë‹ˆë©”ì´ì…˜ ë¹„í™œì„±í™”)
        const justEliminated = panel.updatePanel(team, matchTeam, playersMap, currentIndex, false); // refreshë¥¼ falseë¡œ ì„¤ì •

        if (justEliminated && !matchEnded) {
            // WPF ë¡œì§: if ((int)matchTeam.PlacementRank == 2) matchEnded = true;
            // placement_rankê°€ 2ì´ë©´ ë§¤ì¹˜ ì¢…ë£Œ (2ë“±ì´ íƒˆë½í•˜ë©´ 1ë“±ë§Œ ë‚¨ìŒ)
            if (matchTeam.placement_rank === 2) {
                matchEnded = true;
                console.log('Match ended - 2nd place team eliminated');
            }
            eliminatedTeams.push(matchTeam);
            console.log(`Added eliminated team: ${matchTeam.name} (rank: ${matchTeam.rank})`);
        }

        currentIndex++;
    });

    // WPF ë¡œì§: if (matchEnded) return; ë§¤ì¹˜ê°€ ëë‚˜ë©´ íƒˆë½ ì˜¤ë²„ë ˆì´ ì²˜ë¦¬ ì•ˆí•¨
    if (matchEnded) {
        console.log('Match ended, skipping elimination overlay');
        return;
    }

    // íƒˆë½ íŒ€ì´ ìˆìœ¼ë©´ ì˜¤ë²„ë ˆì´ ì²˜ë¦¬
    if (eliminatedTeams.length > 0) {
        console.log(`Processing ${eliminatedTeams.length} eliminated teams`);

        // WPF ë¡œì§: eliminatedTeams.Sort((team, team2) => team2.PlacementRank.CompareTo(team.PlacementRank));
        eliminatedTeams.sort((team1, team2) => {
            return team2.placement_rank - team1.placement_rank; // ë†’ì€ ìˆœìœ„ë¶€í„°
        });

        // FIXME(Gigone): íƒˆë½ ì˜¤ë²„ë ˆì´ì— ì¶”ê°€
        // if (eliminationOverlay) {
        //     // eliminationOverlay.enqueue(eliminatedTeams, matchTeamMap.size);
        // }
    }

    // F1 ìŠ¤íƒ€ì¼ ìœ„ì¹˜ ì¡°ì • (ì²« ë¡œë“œì´ê±°ë‚˜ ìƒˆë¡œê³ ì¹¨ì¸ ê²½ìš°)
    if (refresh || totalTeamIndexMap.size === teamsToShow.length) {
        // ì• ë‹ˆë©”ì´ì…˜ ì—†ì´ ì¦‰ì‹œ ì˜¬ë°”ë¥¸ ìœ„ì¹˜ë¡œ ì´ë™ (PanelAnimationController ì‚¬ìš©)
        setTimeout(() => {
            PanelAnimationController.snapToPositions(teamsToShow);
        }, 100);
    }
}

/**
 * ë¦¬ë”ë³´ë“œ í´ë¦¬ì–´ (WPF Clear ë©”ì„œë“œ)
 */
function clearLeaderboard(): void {
    totalTeamIndexMap.clear();

    const container = document.querySelector('.teams-container');
    if (container) {
        // ê¸°ì¡´ íŒ¨ë„ë“¤ ëª¨ë‘ ì œê±°
        container.innerHTML = '';

        // íƒ€ì´í‹€ íŒ¨ë„ ë‹¤ì‹œ ì¶”ê°€ (í•„ìš”í•œ ê²½ìš°)
        // const titlePanel = new LiveTeamPanelTitle();
        // titlePanel.appendTo(container as HTMLElement);
    }

    console.log('[clearLeaderboard] Leaderboard cleared and F1 animations reset');
}

/**
 * ë¼ì´ë¸ŒìŠ¤íƒ ë”© UI ì´ˆê¸°í™”
 */
function initializeLiveStandingUI(): void {
    try {
        console.log('Starting live standing UI initialization...');

        // CSS ë³€ìˆ˜ ì ìš©
        applyCSSVariables(currentConfig);
        console.log('CSS variables applied');

        // ì»¨í…Œì´ë„ˆ ì°¾ê¸°
        const container = document.querySelector('.livestanding-content');
        if (!container) {
            console.error('Livestanding content container not found');
            return;
        }
        console.log('Container found:', container);

        // íŒ€ ì»¨í…Œì´ë„ˆ í™•ì¸ (HTMLì— ì´ë¯¸ ìˆì–´ì•¼ í•¨)
        const teamsContainer = container.querySelector('.teams-container');
        if (!teamsContainer) {
            console.error('Teams container not found in HTML');
            return;
        }
        console.log('Teams container found:', teamsContainer);

        // ê¸°ì¡´ íŒ€ íŒ¨ë„ë“¤ë§Œ ì œê±°
        teamsContainer.innerHTML = '';
        console.log('Teams container cleared');

        console.log('Live standing UI initialized successfully');
    } catch (error) {
        console.error('Failed to initialize live standing UI:', error);
        console.error('Error details:', error);
    }
}

/**
 * ë°ì´í„°ë¥¼ íì— ì¶”ê°€ (ì¦‰ì‹œ ì²˜ë¦¬í•˜ì§€ ì•ŠìŒ)
 */
function enqueueObserverData(observerData: any): void {
    // íì— ë°ì´í„° ì¶”ê°€ (FIFO)
    dataQueue.push(observerData);
    console.log(`ğŸ“¥ Data enqueued. Queue length: ${dataQueue.length}`);
}

/**
 * íì—ì„œ ë°ì´í„°ë¥¼ êº¼ë‚´ì„œ ì²˜ë¦¬ (Xì´ˆ ê°„ê²©)
 */
function processDataFromQueue(): void {
    if (dataQueue.length === 0) {
        console.log('ğŸ“­ Queue is empty, skipping processing');
        return;
    }

    if (isProcessingData) {
        console.log('â³ Already processing data, skipping');
        return;
    }

    isProcessingData = true;

    // íì—ì„œ ê°€ì¥ ì˜¤ë˜ëœ ë°ì´í„° êº¼ë‚´ê¸° (FIFO)
    const observerData = dataQueue.shift();

    console.log(`ğŸ”„ Processing data from queue. Remaining in queue: ${dataQueue.length}`);

    try {
        console.log('ğŸ”„ Processing observer data:', {
            matchId: observerData.matchId,
            tournamentId: observerData.tournamentId,
            totalTeamStatsLength: observerData.totalTeamStats?.length,
            totalPlayerStatsLength: observerData.totalPlayerStats?.length
        });

        // MessageDataConverterë¥¼ ì‚¬ìš©í•˜ì—¬ ë°ì´í„° ë³€í™˜
        console.log('ğŸ”„ Converting data...');
        const observerMessage: ObserverMessage2 = MessageDataConverter.convertToObserverMessage2(observerData);

        console.log('ğŸ”„ Converted message:', {
            tournament_id: observerMessage.tournament_id,
            match_id_type: typeof observerMessage.match_id,
            match_id_length: observerMessage.match_id?.length,
            total_team_stats_length: observerMessage.total_team_stats?.length
        });

        // ë°ì´í„° ìœ íš¨ì„± ê²€ì‚¬
        console.log('ğŸ”„ Validating data...');
        if (!MessageDataConverter.validateObserverMessage2(observerMessage)) {
            console.error('âŒ Invalid observer message data');
            return;
        }

        // ë¼ì´ë¸ŒìŠ¤íƒ ë”© ë°ì´í„° ì—…ë°ì´íŠ¸
        console.log('ğŸ”„ Updating live standing data...');
        updateLiveStandingData(observerMessage);

        console.log('âœ… Observer data processed successfully');

    } catch (error: any) {
        console.error('âŒ Failed to process observer data:', error);
        console.error('Error stack:', error.stack);
    } finally {
        // Xì´ˆ í›„ì— ë‹¤ìŒ ë°ì´í„° ì²˜ë¦¬ ê°€ëŠ¥í•˜ë„ë¡ ì„¤ì •
        setTimeout(() => {
            isProcessingData = false;
            console.log('âœ… Data processing cooldown finished');
        }, queueDelayInSecs * 1000);
    }
}

/**
 * ë°ì´í„° ì²˜ë¦¬ ì¸í„°ë²Œ ì‹œì‘
 */
function startDataProcessingInterval(): void {
    if (dataProcessingInterval) {
        clearInterval(dataProcessingInterval);
    }

    // Xì´ˆë§ˆë‹¤ íì—ì„œ ë°ì´í„° ì²˜ë¦¬
    dataProcessingInterval = setInterval(() => {
        processDataFromQueue();
    }, queueDelayInSecs * 1000);
}

/**
 * ë°ì´í„° ì²˜ë¦¬ ì¸í„°ë²Œ ì¤‘ì§€
 */
function stopDataProcessingInterval(): void {
    if (dataProcessingInterval) {
        clearInterval(dataProcessingInterval);
        dataProcessingInterval = null;
        console.log('â¹ï¸ Data processing interval stopped');
    }
}

/**
 * ì‹¤ì œ ObserverMessage2 ë°ì´í„° ì²˜ë¦¬ (ì´ì œ íë¥¼ í†µí•´ì„œë§Œ í˜¸ì¶œë¨)
 */
function handleObserverDataUpdate(observerData: any): void {
    // ë°ì´í„°ë¥¼ íì— ì¶”ê°€ë§Œ í•¨ (ì¦‰ì‹œ ì²˜ë¦¬í•˜ì§€ ì•ŠìŒ)
    enqueueObserverData(observerData);
}

/**
 * ë¼ì´ë¸ŒìŠ¤íƒ ë”© ì˜¤ë²„ë ˆì´ DOM ì´ˆê¸°í™”
 */
function initializeLiveStandingDOM(): void {
    try {
        console.log('initializeLiveStandingDOM called');
        console.log('window.api available:', !!(window as any).api);
        console.log('window.api.receive available:', !!((window as any).api && (window as any).api.receive));

        initializeLiveStandingUI();
        initializeTimer();
        updateStatusIndicator();

        // IPC ì´ë²¤íŠ¸ ë¦¬ìŠ¤ë„ˆ ë“±ë¡
        if ((window as any).api && (window as any).api.receive) {
            (window as any).api.receive('observer-data-update', (observerData: any) => {
                console.log('ğŸ”¥ Received observer data update in livestanding:', observerData);
                handleObserverDataUpdate(observerData);
            });
            console.log('âœ… IPC event listener registered successfully');
        } else {
            console.warn('âŒ api not available, using test data only');
            console.log('Available window properties:', Object.keys(window));
        }

        // íƒˆë½ ì˜¤ë²„ë ˆì´ ì´ˆê¸°í™”
        eliminationOverlay = new EliminationOverlay();

        // ë°ì´í„° ì²˜ë¦¬ ì¸í„°ë²Œ ì‹œì‘ (Xì´ˆë§ˆë‹¤ íì—ì„œ ë°ì´í„° ì²˜ë¦¬)
        startDataProcessingInterval();
    } catch (error) {
        console.error('Failed to initialize LiveStanding window:', error);
    }
}


// DOMì´ ë¡œë“œëœ í›„ ì‹¤í–‰
console.log('Setting up DOMContentLoaded event listener');
document.addEventListener('DOMContentLoaded', () => {
    console.log('DOMContentLoaded event fired in livestanding.ts');
    initializeLiveStandingDOM();
});

// í‚¤ë³´ë“œ ë‹¨ì¶•í‚¤ (ì„ íƒì‚¬í•­)
document.addEventListener('keydown', (event: KeyboardEvent) => {
    switch (event.key) {
        case 'r':
        case 'R':
            if (event.ctrlKey || event.metaKey) {
                event.preventDefault();
                restartSession();
            }
            break;
        case ' ':
            event.preventDefault();
            toggleSession();
            break;
        case 'Escape':
            // ì°½ ë‹«ê¸° ì „ ì •ë¦¬
            stopDataProcessingInterval();
            break;
    }
});

// ì°½ì´ ë‹«í ë•Œ ì •ë¦¬
window.addEventListener('beforeunload', () => {
    stopDataProcessingInterval();
    console.log('ğŸ§¹ LiveStanding window cleanup completed');
});
